--- a/ios/Canva.xcodeproj/xcshareddata/xcschemes/WebsenorBase.xcscheme
+++ b/ios/Canva.xcodeproj/xcshareddata/xcschemes/WebsenorBase.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "reactnativeseed.app"
-               BlueprintName = "reactnativeseed"
-               ReferencedContainer = "container:reactnativeseed.xcodeproj">
+               BuildableName = "canva.app"
+               BlueprintName = "canva"
+               ReferencedContainer = "container:Canva.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "reactnativeseedTests.xctest"
-               BlueprintName = "reactnativeseedTests"
-               ReferencedContainer = "container:reactnativeseed.xcodeproj">
+               BuildableName = "canvaTests.xctest"
+               BlueprintName = "canvaTests"
+               ReferencedContainer = "container:Canva.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "reactnativeseed.app"
-            BlueprintName = "reactnativeseed"
-            ReferencedContainer = "container:reactnativeseed.xcodeproj">
+            BuildableName = "canva.app"
+            BlueprintName = "canva"
+            ReferencedContainer = "container:Canva.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "reactnativeseed.app"
-            BlueprintName = "reactnativeseed"
-            ReferencedContainer = "container:reactnativeseed.xcodeproj">
+            BuildableName = "canva.app"
+            BlueprintName = "canva"
+            ReferencedContainer = "container:Canva.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
