--- a/package.json
+++ b/package.json
@@ -25,22 +25,24 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
+    "@shopify/react-native-skia": "^0.1.225",
+    "@types/jest": "^29.5.11",
     "@types/react-native-vector-icons": "^6.4.13",
     "babel-plugin-module-resolver": "^5.0.0",
     "dayjs": "^1.11.9",
     "react": "18.2.0",
-    "react-hook-form": "^7.45.2",
     "react-native": "0.72.3",
     "react-native-device-info": "^10.8.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-flipper": "^0.206.0",
-    "react-native-gesture-handler": "^2.12.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.9.1",
-    "react-native-paper-dates": "^0.18.12",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.22.1",
+    "react-native-share": "^10.0.2",
     "react-native-simple-toast": "^3.0.0",
     "react-native-snackbar": "^2.6.2",
     "react-native-vector-icons": "^10.0.0",
@@ -60,7 +62,7 @@
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
+    "jest": "^29.7.0",
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
