--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-simple-toast": "^3.0.0",
     "react-native-snackbar": "^2.6.2",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-view-shot": "^3.8.0",
     "react-redux": "^8.1.2",
     "redux-flipper": "^2.0.2",
     "redux-persist": "^6.0.0",
