--- a/ios/Canva/Info.plist
+++ b/ios/Canva/Info.plist
@@ -36,7 +36,15 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>need this permission</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>need this permission</string>
+	<key>NSCameraUsageDescription</key>
+	<string>need this permission</string>
+	<key>NSCameraUsageDescription</key>
+	<string>need this permission</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>need this permission</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
