--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-flipper": "^0.206.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "^4.7.1",
