--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "react-native-image-picker": "^7.1.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.9.1",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.22.1",
     "react-native-share": "^10.0.2",
     "react-native-simple-toast": "^3.0.0",
     "react-native-snackbar": "^2.6.2",
+    "react-native-super-grid": "^5.0.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-view-shot": "^3.8.0",
     "react-redux": "^8.1.2",
